--- a/books/book_section_and_subsection.ipynb
+++ b/books/book_section_and_subsection.ipynb
@@ -2,41 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "2faa5023",
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Generating Table of Contents for subject: Prompt Engineering\n",
-      "Table of Contents generated successfully.\n",
-      "Generating content for Chapter 1: Introduction to Prompt Engineering...\n",
-      "Generating content for Section 1.1: History and Evolution of Prompt Engineering...\n",
-      "Generating content for Section 1.2: Key Concepts and Terminology...\n",
-      "Generating content for Chapter 2: Understanding Language Models and Their Limitations...\n",
-      "Generating content for Section 2.1: Types of Language Models...\n",
-      "Generating content for Section 2.2: Challenges and Limitations of Language Models...\n",
-      "Generating content for Chapter 3: Crafting Effective Prompts for Different NLP Tasks...\n",
-      "Generating content for Section 3.1: Prompt Design Principles...\n",
-      "Generating content for Section 3.2: Creating Prompts for Text Classification, Sentiment Analysis, and More...\n",
-      "Generating content for Chapter 4: Using Prompt Engineering for Conversational AI Development...\n",
-      "Generating content for Section 4.1: Building Conversational Interfaces with Dialogue Management Systems...\n",
-      "Generating content for Section 4.2: Creating Emotional Intelligence and Empathy in Chatbots...\n",
-      "Generating content for Chapter 5: Measuring Prompt Engineering Success and Optimizing Performance...\n",
-      "Generating content for Section 5.1: Evaluating Prompt Performance with Metrics and Benchmarks...\n",
-      "Generating content for Section 5.2: Using Techniques like Active Learning for Continuous Improvement...\n",
-      "Generating content for Chapter 6: Advanced Prompt Engineering Techniques and Applications...\n",
-      "Generating content for Section 6.1: Adversarial Attacks and Defenses in Prompt Engineering...\n",
-      "Generating content for Section 6.2: Exploring Emerging Trends and Future Directions for Prompt Engineering...\n",
-      "Merging content into a PDF book...\n",
-      "PDF book generated successfully: Generated_Book.pdf\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "id": "ffc2eec2",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import requests\n",
     "import json\n",
@@ -48,34 +17,42 @@
     "MODEL_NAME = \"llama3.2:latest\"\n",
     "\n",
     "# Directory to save generated content\n",
-    "OUTPUT_DIR = \"book_content\"\n",
+    "OUTPUT_DIR = \"book_content_detail\"\n",
     "os.makedirs(OUTPUT_DIR, exist_ok=True)\n",
     "\n",
     "def generate_toc(subject):\n",
     "    \"\"\"Generate a Table of Contents for the given subject.\"\"\"\n",
     "    prompt = f\"\"\"\n",
-    "    You are an expert assistant skilled at creating book outlines.\n",
-    "    Given a subject your task is to create a detailed Table of Contents for a book on the given subject.\n",
-    "    Now generate detailed Table of Contents for a book for Subject: {subject}\n",
+    "    You are an expert assistant skilled at creating detailed book outlines.\n",
+    "    Given a subject, your task is to create a comprehensive Table of Contents for a book on the given subject.\n",
     "    \n",
-    "    Structure the response as a valid JSON object with chapters and sections. \n",
-    "    No other explanatory text should be present in the response.\n",
-    "    Output format:\n",
+    "    Each chapter should have sections, and when relevant, sections should have subsubsections. \n",
+    "    Structure the Table of Contents hierarchically to ensure maximum detail and granularity.\n",
+    "    \n",
+    "    Now generate a detailed Table of Contents for the book with Subject: {subject}.\n",
+    "    \n",
+    "    Structure the response as a valid JSON object:\n",
     "    {{\n",
     "        \"Table_of_Contents\": [\n",
     "            {{\n",
     "                \"Title\": \"Chapter 1: Title of Chapter\",\n",
     "                \"Sections\": [\n",
-    "                    \"Section 1.1: Title of Section\",\n",
-    "                    \"Section 1.2: Title of Section\"\n",
+    "                    {{\n",
+    "                        \"Title\": \"Section 1.1: Title of Section\",\n",
+    "                        \"Subsections\": [\n",
+    "                            \"Subsubsection 1.1.1: Title of Subsubsection\",\n",
+    "                            \"Subsubsection 1.1.2: Title of Subsubsection\"\n",
+    "                        ]\n",
+    "                    }},\n",
+    "                    {{\n",
+    "                        \"Title\": \"Section 1.2: Title of Section\",\n",
+    "                        \"Subsections\": []\n",
+    "                    }}\n",
     "                ]\n",
     "            }},\n",
     "            {{\n",
     "                \"Title\": \"Chapter 2: Title of Chapter\",\n",
-    "                \"Sections\": [\n",
-    "                    \"Section 2.1: Title of Section\",\n",
-    "                    \"Section 2.2: Title of Section\"\n",
-    "                ]\n",
+    "                \"Sections\": []\n",
     "            }}\n",
     "        ]\n",
     "    }}\n",
@@ -93,14 +70,15 @@
     "        raise Exception(f\"Failed to parse JSON response: {content}\")\n",
     "\n",
     "def generate_section(title):\n",
-    "    \"\"\"Generate content for a given chapter or section title.\"\"\"\n",
+    "    \"\"\"Generate content for a given chapter, section, or subsubsection title.\"\"\"\n",
     "    prompt = f\"\"\"\n",
     "    You are a knowledgeable assistant tasked with writing detailed content for a book.\n",
-    "    Please write content for the following chapter or section:\n",
-    "    Chapter or section: '{title}'\n",
+    "    Please write content for the following title:\n",
+    "    Title: '{title}'\n",
     "    \n",
     "    The content should be comprehensive, well-structured, and professional.\n",
-    "    Include examples, subtopics, and technical insights where applicable.\n",
+    "    Include examples, subtopics, and technical insights where applicable. \n",
+    "    Expand on subtopics wherever possible to provide a deep understanding of the subject.\n",
     "    \"\"\"\n",
     "    payload = {\"model\": MODEL_NAME, \"prompt\": prompt, \"stream\": False}\n",
     "    response = requests.post(OLLAMA_URL, json=payload)\n",
@@ -115,7 +93,7 @@
     "    with open(os.path.join(OUTPUT_DIR, filename), \"w\") as f:\n",
     "        f.write(content)\n",
     "\n",
-    "def create_pdf_from_content(toc, output_file=f\"{OUTPUT_DIR}/Generated_Book.pdf\"):\n",
+    "def create_pdf_from_content(toc, output_file=f\"{OUTPUT_DIR}/Generated_Book_Detail.pdf\"):\n",
     "    \"\"\"Generate a PDF book from the content.\"\"\"\n",
     "    pdf = FPDF()\n",
     "    pdf.set_auto_page_break(auto=True, margin=15)\n",
@@ -136,7 +114,9 @@
     "    for chapter in toc[\"Table_of_Contents\"]:\n",
     "        pdf.cell(0, 10, chapter[\"Title\"], ln=True)\n",
     "        for section in chapter[\"Sections\"]:\n",
-    "            pdf.cell(10, 10, f\"  {section}\", ln=True)\n",
+    "            pdf.cell(10, 10, f\"  {section['Title']}\", ln=True)\n",
+    "            for subsubsection in section[\"Subsections\"]:\n",
+    "                pdf.cell(20, 10, f\"    {subsubsection}\", ln=True)\n",
     "        pdf.ln(5)\n",
     "    \n",
     "    # Chapters\n",
@@ -156,23 +136,37 @@
     "        \n",
     "        for section in chapter[\"Sections\"]:\n",
     "            pdf.add_page()\n",
-    "            pdf.set_font(\"Arial\", size=14, style=\"B\")\n",
-    "            pdf.cell(0, 10, section, ln=True)\n",
+    "            pdf.set_font(\"Arial\", size=16, style=\"B\")\n",
+    "            pdf.cell(0, 10, section[\"Title\"], ln=True)\n",
     "            pdf.ln(5)\n",
     "            \n",
-    "            section_file = f\"{section.replace(' ', '_')}.txt\"\n",
+    "            section_file = f\"{section['Title'].replace(' ', '_')}.txt\"\n",
     "            section_path = os.path.join(OUTPUT_DIR, section_file)\n",
     "            if os.path.exists(section_path):\n",
     "                with open(section_path, \"r\") as f:\n",
     "                    content = f.read()\n",
     "                pdf.set_font(\"Arial\", size=12)\n",
     "                pdf.multi_cell(0, 10, content)\n",
+    "            \n",
+    "            for subsubsection in section[\"Subsections\"]:\n",
+    "                pdf.add_page()\n",
+    "                pdf.set_font(\"Arial\", size=14, style=\"B\")\n",
+    "                pdf.cell(0, 10, subsubsection, ln=True)\n",
+    "                pdf.ln(5)\n",
+    "                \n",
+    "                subsubsection_file = f\"{subsubsection.replace(' ', '_')}.txt\"\n",
+    "                subsubsection_path = os.path.join(OUTPUT_DIR, subsubsection_file)\n",
+    "                if os.path.exists(subsubsection_path):\n",
+    "                    with open(subsubsection_path, \"r\") as f:\n",
+    "                        content = f.read()\n",
+    "                    pdf.set_font(\"Arial\", size=12)\n",
+    "                    pdf.multi_cell(0, 10, content)\n",
     "    \n",
     "    pdf.output(output_file)\n",
     "\n",
     "# Main Execution\n",
     "if __name__ == \"__main__\":\n",
-    "    subject = \"Prompt Engineering\"\n",
+    "    subject = \"Large Language Model\"\n",
     "    print(f\"Generating Table of Contents for subject: {subject}\")\n",
     "    \n",
     "    # Step 1: Generate ToC\n",
@@ -180,22 +174,28 @@
     "    print(\"Table of Contents generated successfully.\")\n",
     "    save_content_to_file(f\"toc.txt\", json.dumps(toc, indent=4))\n",
     "    \n",
-    "    # Step 2: Generate content for each chapter/section\n",
+    "    # Step 2: Generate content for each chapter/section/subsubsection\n",
     "    for chapter in toc[\"Table_of_Contents\"]:\n",
     "        chapter_title = chapter[\"Title\"]\n",
     "        print(f\"Generating content for {chapter_title}...\")\n",
     "        chapter_content = generate_section(chapter_title)\n",
     "        save_content_to_file(f\"{chapter_title.replace(' ', '_')}.txt\", chapter_content)\n",
     "        \n",
-    "        for section_title in chapter[\"Sections\"]:\n",
+    "        for section in chapter[\"Sections\"]:\n",
+    "            section_title = section[\"Title\"]\n",
     "            print(f\"Generating content for {section_title}...\")\n",
     "            section_content = generate_section(section_title)\n",
     "            save_content_to_file(f\"{section_title.replace(' ', '_')}.txt\", section_content)\n",
+    "            \n",
+    "            for subsubsection_title in section[\"Subsections\"]:\n",
+    "                print(f\"Generating content for {subsubsection_title}...\")\n",
+    "                subsubsection_content = generate_section(subsubsection_title)\n",
+    "                save_content_to_file(f\"{subsubsection_title.replace(' ', '_')}.txt\", subsubsection_content)\n",
     "    \n",
     "    # Step 3: Create PDF\n",
     "    print(\"Merging content into a PDF book...\")\n",
     "    create_pdf_from_content(toc)\n",
-    "    print(f\"PDF book generated successfully at location: {OUTPUT_DIR}/Generated_Book.pdf\")\n"
+    "    print(f\"PDF book generated successfully at location: {OUTPUT_DIR}/Generated_Book_Detail.pdf\")"
    ]
   }
  ],
