--- a/langchain/langchain.ipynb
+++ b/langchain/langchain.ipynb
@@ -2,7 +2,33 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 5,
+   "id": "a7405b29",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import os\n",
+    "from dotenv import load_dotenv\n",
+    "\n",
+    "load_dotenv()\n",
+    "\n",
+    "#print(os.environ.get('OPENAI_API_KEY'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "64fec478",
    "metadata": {},
    "outputs": [],
@@ -19,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 8,
    "id": "30dea6bc",
    "metadata": {},
    "outputs": [
@@ -48,7 +74,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Last Monday.\n"
+      "The answer to the question is: Last Monday.\n"
      ]
     },
     {
@@ -96,6 +122,111 @@
     "\n",
     "result = qa_chain.invoke({\"context\": context, \"question\": question})\n",
     "pretty_print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "ad458d24",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Marker 'prompt_log':\n",
+      "messages=[HumanMessage(content=\"\\ncontext: {'context': 'Robert bunked school last Monday.', 'question': 'When did Robert bunk school?'}\\nquestion: {'context': 'Robert bunked school last Monday.', 'question': 'When did Robert bunk school?'}\\nanswer:\\n\", additional_kwargs={}, response_metadata={})]\n",
+      "\n",
+      "Final Result:\n",
+      " Robert bunked school last Monday.\n"
+     ]
+    }
+   ],
+   "source": [
+    "from langchain.chat_models import ChatOpenAI\n",
+    "from langchain.prompts import ChatPromptTemplate, PromptTemplate\n",
+    "from langchain.schema import HumanMessage\n",
+    "from langchain_core.output_parsers import StrOutputParser\n",
+    "from langchain.chains import LLMChain\n",
+    "from langchain.schema.runnable import RunnableMap, RunnablePassthrough\n",
+    "\n",
+    "# Initialize the OpenAI client\n",
+    "llm = ChatOpenAI(\n",
+    "    model=\"gpt-4o-mini\",\n",
+    "    #model=\"gpt-3.5-turbo\",  # Specify the OpenAI model (e.g., \"gpt-3.5-turbo\" or \"gpt-4\")\n",
+    "    temperature=0.0\n",
+    ")\n",
+    "\n",
+    "# Define the template\n",
+    "template = \"\"\"\n",
+    "context: {context}\n",
+    "question: {question}\n",
+    "answer:\n",
+    "\"\"\"\n",
+    "prompt = ChatPromptTemplate.from_template(template)\n",
+    "\n",
+    "# Define a logging function\n",
+    "def log(marker, log_data):\n",
+    "    print(f\"Marker '{marker}':\\n{log_data}\\n\")\n",
+    "    return log_data\n",
+    "\n",
+    "# Create the QA chain\n",
+    "qa_chain = (\n",
+    "    RunnableMap(\n",
+    "        {\n",
+    "            \"context\": RunnablePassthrough(),\n",
+    "            \"question\": RunnablePassthrough(),\n",
+    "        }\n",
+    "    )\n",
+    "    | prompt\n",
+    "    | (lambda x: log(\"prompt_log\", x))  # Log the intermediate prompt\n",
+    "    | llm\n",
+    "    | StrOutputParser()  # Parse the LLM output into a string\n",
+    ")\n",
+    "\n",
+    "# Input data\n",
+    "context = \"Robert bunked school last Monday.\"\n",
+    "question = \"When did Robert bunk school?\"\n",
+    "\n",
+    "# Invoke the chain\n",
+    "result = qa_chain.invoke({\"context\": context, \"question\": question})\n",
+    "\n",
+    "# Display the result\n",
+    "print(\"Final Result:\\n\", result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "b4ffe091",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Function calls itself,  \n",
+      "Layers deep in logic's mind,  \n",
+      "Endless loop of thought.\n"
+     ]
+    }
+   ],
+   "source": [
+    "from openai import OpenAI\n",
+    "client = OpenAI()\n",
+    "\n",
+    "completion = client.chat.completions.create(\n",
+    "    model=\"gpt-4o-mini\",\n",
+    "    messages=[\n",
+    "        {\"role\": \"system\", \"content\": \"You are a helpful assistant.\"},\n",
+    "        {\n",
+    "            \"role\": \"user\",\n",
+    "            \"content\": \"Write a haiku about recursion in programming.\"\n",
+    "        }\n",
+    "    ]\n",
+    ")\n",
+    "\n",
+    "print(completion.choices[0].message.content)"
    ]
   }
  ],
