--- a/audio/gemini-service.ipynb
+++ b/audio/gemini-service.ipynb
@@ -3,22 +3,58 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f34673b8",
+   "id": "fba2c89f",
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "from dotenv import load_dotenv\n",
-    "\n",
     "load_dotenv()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "6799f36d",
+   "execution_count": 20,
+   "id": "76e09421",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "models/gemini-1.0-pro-latest\n",
+      "models/gemini-1.0-pro\n",
+      "models/gemini-pro\n",
+      "models/gemini-1.0-pro-001\n",
+      "models/gemini-1.0-pro-vision-latest\n",
+      "models/gemini-pro-vision\n",
+      "models/gemini-1.5-pro-latest\n",
+      "models/gemini-1.5-pro-001\n",
+      "models/gemini-1.5-pro-002\n",
+      "models/gemini-1.5-pro\n",
+      "models/gemini-1.5-pro-exp-0801\n",
+      "models/gemini-1.5-pro-exp-0827\n",
+      "models/gemini-1.5-flash-latest\n",
+      "models/gemini-1.5-flash-001\n",
+      "models/gemini-1.5-flash-001-tuning\n",
+      "models/gemini-1.5-flash\n",
+      "models/gemini-1.5-flash-exp-0827\n",
+      "models/gemini-1.5-flash-002\n",
+      "models/gemini-1.5-flash-8b\n",
+      "models/gemini-1.5-flash-8b-001\n",
+      "models/gemini-1.5-flash-8b-latest\n",
+      "models/gemini-1.5-flash-8b-exp-0827\n",
+      "models/gemini-1.5-flash-8b-exp-0924\n",
+      "models/gemini-2.0-flash-exp\n",
+      "models/gemini-exp-1206\n",
+      "models/gemini-exp-1121\n",
+      "models/gemini-exp-1114\n",
+      "models/gemini-2.0-flash-thinking-exp\n",
+      "models/gemini-2.0-flash-thinking-exp-1219\n",
+      "models/learnlm-1.5-pro-experimental\n"
+     ]
+    }
+   ],
    "source": [
     "import google.generativeai as genai\n",
     "for m in genai.list_models():\n",
@@ -29,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f4591b3d",
+   "id": "388b3a53",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "45f18759",
+   "id": "543fc240",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "09809753",
+   "id": "b668a9bb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "66bf7f9b",
+   "id": "19648f80",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9c070849",
+   "id": "500bb998",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +121,7 @@
     "\n",
     "    vertexai.init(project=project_id, location=\"us-central1\")\n",
     "\n",
-    "    model = GenerativeModel(model_name=\"gemini-1.5-pro-preview-0409\")\n",
+    "    model = GenerativeModel(model_name=\"gemini-1.5-pro\")\n",
     "\n",
     "    prompt = \"\"\"\n",
     "    Please provide a summary for the audio.\n",
@@ -105,7 +141,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8c7e8de7",
+   "id": "5e080e06",
    "metadata": {},
    "outputs": [],
    "source": [
