--- a/audio/gemini-service.ipynb
+++ b/audio/gemini-service.ipynb
@@ -2,10 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "fba2c89f",
+   "execution_count": 22,
+   "id": "94c49858",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import os\n",
     "from dotenv import load_dotenv\n",
@@ -14,14 +25,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "76e09421",
+   "execution_count": 23,
+   "id": "b610d9b6",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "models/chat-bison-001\n",
+      "models/text-bison-001\n",
+      "models/embedding-gecko-001\n",
       "models/gemini-1.0-pro-latest\n",
       "models/gemini-1.0-pro\n",
       "models/gemini-pro\n",
@@ -51,33 +65,72 @@
       "models/gemini-exp-1114\n",
       "models/gemini-2.0-flash-thinking-exp\n",
       "models/gemini-2.0-flash-thinking-exp-1219\n",
-      "models/learnlm-1.5-pro-experimental\n"
+      "models/learnlm-1.5-pro-experimental\n",
+      "models/embedding-001\n",
+      "models/text-embedding-004\n",
+      "models/aqa\n"
      ]
     }
    ],
    "source": [
     "import google.generativeai as genai\n",
     "for m in genai.list_models():\n",
-    "    if 'generateContent' in m.supported_generation_methods:\n",
-    "        print(m.name)"
+    "    #if 'generateContent' in m.supported_generation_methods:\n",
+    "    print(m.name)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "388b3a53",
+   "execution_count": 32,
+   "id": "cbdf096b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = genai.GenerativeModel('gemini-1.5-pro-latest')"
+    "model = genai.GenerativeModel('gemini-1.5-flash')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "543fc240",
+   "execution_count": 34,
+   "id": "6b9617d2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Defining \"influence\" is subjective and depends on the criteria used (political power, economic power, cultural impact, etc.).  There's no single definitive list, and any attempt will be inherently biased and incomplete. However, here's a list of individuals frequently cited as highly influential in various spheres, acknowledging the limitations of such a compilation:\n",
+      "\n",
+      "**Political Leaders:**\n",
+      "\n",
+      "* **Xi Jinping (China):**  Leader of the Chinese Communist Party, significantly shaping global geopolitics.\n",
+      "* **Joe Biden (USA):** President of the United States, influencing global economics and foreign policy.\n",
+      "* **Vladimir Putin (Russia):** President of Russia, a key figure in international relations and a significant geopolitical actor.\n",
+      "* **Narendra Modi (India):** Prime Minister of India, leading the world's largest democracy and a major economic power.\n",
+      "\n",
+      "\n",
+      "**Business Leaders:**\n",
+      "\n",
+      "* **Elon Musk (Tesla, SpaceX):**  Transformative figure in electric vehicles, space exploration, and social media.\n",
+      "* **Jeff Bezos (Amazon):** Founder of Amazon, profoundly impacting e-commerce and global logistics.\n",
+      "* **Mark Zuckerberg (Meta):** Founder of Facebook/Meta, wielding significant influence over social media and data.\n",
+      "\n",
+      "\n",
+      "**Religious Leaders:**\n",
+      "\n",
+      "* **Pope Francis:** Head of the Catholic Church, influential in global social and moral discourse.\n",
+      "\n",
+      "\n",
+      "**Activists and Thought Leaders:**\n",
+      "\n",
+      "* **Greta Thunberg:**  Prominent climate activist with global reach and influence on environmental policy.\n",
+      "\n",
+      "\n",
+      "**It's important to note:**  This list is not exhaustive and excludes many other influential individuals across diverse fields like science, technology, medicine, and the arts.  The influence of these individuals is also constantly evolving.  Furthermore, the power dynamics shift frequently, making any such list a snapshot in time.  Finally, focusing solely on individuals overlooks the power of collective movements and organizations.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "response = model.generate_content(\"Please provide a list of the most influential people in the world.\")\n",
     "print(response.text)"
@@ -86,7 +139,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b668a9bb",
+   "id": "5c743dd2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19648f80",
+   "id": "98e1c0db",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "500bb998",
+   "id": "e7178119",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5e080e06",
+   "id": "1ce0dab7",
    "metadata": {},
    "outputs": [],
    "source": [
